@@ -1,8 +1,8 @@
-/*
-    Copyright 2008-2017, Felspar Co Ltd. http://support.felspar.com/
+/**
+    Copyright 2008-2018, Felspar Co Ltd. <https://support.felspar.com/>
+
     Distributed under the Boost Software License, Version 1.0.
-    See accompanying file LICENSE_1_0.txt or copy at
-        http://www.boost.org/LICENSE_1_0.txt
+    See <http://www.boost.org/LICENSE_1_0.txt>
 */
 
 
@@ -102,6 +102,8 @@ FSL_TEST_FUNCTION( as_string ) {
 
 FSL_TEST_FUNCTION( equality ) {
     fostlib::json v0, v1( true ), v2( 10 ), v3( L"true" ), v4( L"10" ), v5( L"0" ), v6( L"Hello world!" ), v7( float( 1.0 ) ), v8( double( 3.141 ) );
+
+    FSL_CHECK_EQ(v3, "true");
 
     FSL_CHECK_EQ( v0, v0 );
     FSL_CHECK_EQ( v1, v1 );
