@@ -1,5 +1,6 @@
 2018-08-09  Kirit Saelensminde  <kirit@felspar.com>
- Add iteration over the command line arguments passed to `fostlib::arguments`.
+ * Add direct comparison between JSON and u8view.
+ * Add iteration over the command line arguments passed to `fostlib::arguments`.
 
 2018-07-15  Kirit Saelensminde  <kirit@felspar.com>
  Remove `info` member from exception and change `throw` to `noexcept`.
